--- a/src/jss/public/index.html
+++ b/src/jss/public/index.html
@@ -6,17 +6,12 @@
     <meta name="theme-color" content="#000000">
 
     <link rel="shortcut icon" href="%PUBLIC_URL%/favicon.ico">
-    <!--
-      Notice the use of %PUBLIC_URL% in the tags above.
-      It will be replaced with the URL of the `public` folder during the build.
-      Only files inside the `public` folder can be referenced from the HTML.
-
-      Unlike "/favicon.ico" or "favicon.ico", "%PUBLIC_URL%/favicon.ico" will
-      work correctly both with client-side routing and a non-root public URL.
-      Learn how to configure a non-root public URL by running `npm run build`.
-    -->
+    <link rel="stylesheet" href="//cdn.jsdelivr.net/npm/semantic-ui@2.4.0/dist/semantic.min.css" />
+    <link rel="stylesheet" href="//cdnjs.cloudflare.com/ajax/libs/leaflet/1.3.1/leaflet.css">
+    <!-- <link rel="stylesheet" href="//semantic-ui-forest.com/static/dist/semantic-ui/forest-themes/bootswatch/semantic.cyborg.min.css"> -->
+    <link rel="stylesheet" href="//semantic-ui-forest.com/static/dist/semantic-ui/forest-themes/bootswatch/semantic.superhero.min.css">
   </head>
-  <body>
+  <body class="theme dimmable">
     <noscript>
       You need to enable JavaScript to run this app.
     </noscript>
