--- a/src/jss/public/index.html
+++ b/src/jss/public/index.html
@@ -10,6 +10,7 @@
     <link rel="stylesheet" href="//cdnjs.cloudflare.com/ajax/libs/leaflet/1.3.1/leaflet.css">
     <!-- <link rel="stylesheet" href="//semantic-ui-forest.com/static/dist/semantic-ui/forest-themes/bootswatch/semantic.cyborg.min.css"> -->
     <link rel="stylesheet" href="//semantic-ui-forest.com/static/dist/semantic-ui/forest-themes/bootswatch/semantic.superhero.min.css">
+    <link href="https://fonts.googleapis.com/css?family=Faster+One|Press+Start+2P" rel="stylesheet">
   </head>
   <body class="theme dimmable">
     <noscript>
